--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -662,7 +662,7 @@ function determineTurnForDate(task, dateStr) {
     const diffDays = Math.floor((targetDate - today) / (1000 * 60 * 60 * 24));
 
     // For today or past dates, use completion history
-    if (diffDays <= 1) {
+    if (diffDays <= 0) {
         // Check for completions on the current day
         const currentDayCompletions = task.completions && task.completions[dateStr]
             ? task.completions[dateStr].length
@@ -735,8 +735,8 @@ function determineTurnForDate(task, dateStr) {
         // If no history at all, start with the first user
         return userOrder[0];
     } else {
-        // For future dates beyond tomorrow, project the turn
-        return projectTurnForFutureDate(task, dateStr);
+        // For tomorrow and future dates, calculate expected turn
+        return calculateFutureTurn(task, dateStr);
     }
 }
 
@@ -750,10 +750,8 @@ function determineTurnForDate(task, dateStr) {
 
 
 
-
-
 // Project the turn for a future date based on repeat settings
-function projectTurnForFutureDate(task, dateStr) {
+function calculateFutureTurn(task, dateStr) {
     if (!task || !task.users || task.users.length === 0) {
         return "Unknown";
     }
@@ -781,30 +779,17 @@ function projectTurnForFutureDate(task, dateStr) {
         repeatLimit = task.timesPerMonth || 1;
     }
 
-    // Calculate total expected completions up to the previous day
-    let totalCompletions = 0;
-    if (task.repeat === "Daily") {
-        totalCompletions = diffDays * repeatLimit;
-    } else if (task.repeat === "Weekly") {
-        const weeks = Math.floor(diffDays / 7);
-        totalCompletions = weeks * repeatLimit;
-    } else if (task.repeat === "Monthly") {
-        const months = Math.floor(diffDays / 30);
-        totalCompletions = months * repeatLimit;
-    } else {
-        totalCompletions = diffDays;
-    }
-
-    // Determine the starting user from the last actual completion or first user
-    let startingIndex = 0;
-    const allDates = [];
+    // Find the last completion before the target date
+    let lastCompletedUser = null;
+    let lastCompletionDate = null;
     const dateNumbers = {};
+    const allDates = [];
 
     if (task.completions) {
         Object.keys(task.completions).forEach(date => {
             const dateObj = new Date(date);
             dateObj.setHours(0, 0, 0, 0);
-            if (dateObj < startDate) {
+            if (dateObj < targetDate) {
                 const [year, month, day] = date.split('-').map(Number);
                 dateNumbers[date] = year * 10000 + month * 100 + day;
                 allDates.push(date);
@@ -816,25 +801,52 @@ function projectTurnForFutureDate(task, dateStr) {
         for (const date of allDates) {
             const completions = task.completions[date];
             if (completions && completions.length > 0) {
-                const lastCompletedUser = completions[completions.length - 1];
-                startingIndex = userOrder.indexOf(lastCompletedUser);
-                const completionDate = new Date(date);
-                completionDate.setHours(0, 0, 0, 0);
-                const daysSinceCompletion = Math.floor((startDate - completionDate) / (1000 * 60 * 60 * 24));
-                totalCompletions += daysSinceCompletion * repeatLimit;
+                lastCompletedUser = completions[completions.length - 1];
+                lastCompletionDate = new Date(date);
+                lastCompletionDate.setHours(0, 0, 0, 0);
                 break;
             }
         }
     }
 
-    // Calculate the user for the target date
-    const totalTurns = totalCompletions % userOrder.length;
+    let startingIndex = 0;
+    let cycles = 0;
+
+    if (lastCompletedUser && lastCompletionDate) {
+        startingIndex = userOrder.indexOf(lastCompletedUser);
+        const daysSinceLast = Math.floor((targetDate - lastCompletionDate) / (1000 * 60 * 60 * 24));
+        if (task.repeat === "Daily") {
+            cycles = daysSinceLast * repeatLimit;
+        } else if (task.repeat === "Weekly") {
+            const weeksSinceLast = Math.floor(daysSinceLast / 7);
+            cycles = weeksSinceLast * repeatLimit;
+        } else if (task.repeat === "Monthly") {
+            const monthsSinceLast = Math.floor(daysSinceLast / 30);
+            cycles = monthsSinceLast * repeatLimit;
+        } else {
+            cycles = daysSinceLast;
+        }
+    } else {
+        // No completions, assume full cycles from start date
+        if (task.repeat === "Daily") {
+            cycles = diffDays * repeatLimit;
+        } else if (task.repeat === "Weekly") {
+            const weeks = Math.floor(diffDays / 7);
+            cycles = weeks * repeatLimit;
+        } else if (task.repeat === "Monthly") {
+            const months = Math.floor(diffDays / 30);
+            cycles = months * repeatLimit;
+        } else {
+            cycles = diffDays;
+        }
+    }
+
+    // Adjust cycles to account for full daily completions
+    const totalTurns = cycles % userOrder.length;
     const finalIndex = (startingIndex + totalTurns) % userOrder.length;
 
     return userOrder[finalIndex];
 }
-
-
 
 
 
