--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -751,6 +751,7 @@ function determineTurnForDate(task, dateStr) {
 
 
 // Project the turn for a future date based on repeat settings
+
 function calculateFutureTurn(task, dateStr) {
     if (!task || !task.users || task.users.length === 0) {
         return "Unknown";
@@ -779,76 +780,26 @@ function calculateFutureTurn(task, dateStr) {
         repeatLimit = task.timesPerMonth || 1;
     }
 
-    // Find the last completion before the target date
-    let lastCompletedUser = null;
-    let lastCompletionDate = null;
-    const dateNumbers = {};
-    const allDates = [];
-
-    if (task.completions) {
-        Object.keys(task.completions).forEach(date => {
-            const dateObj = new Date(date);
-            dateObj.setHours(0, 0, 0, 0);
-            if (dateObj < targetDate) {
-                const [year, month, day] = date.split('-').map(Number);
-                dateNumbers[date] = year * 10000 + month * 100 + day;
-                allDates.push(date);
-            }
-        });
-
-        allDates.sort((a, b) => dateNumbers[b] - dateNumbers[a]);
-
-        for (const date of allDates) {
-            const completions = task.completions[date];
-            if (completions && completions.length > 0) {
-                lastCompletedUser = completions[completions.length - 1];
-                lastCompletionDate = new Date(date);
-                lastCompletionDate.setHours(0, 0, 0, 0);
-                break;
-            }
-        }
-    }
-
-    let startingIndex = 0;
-    let cycles = 0;
-
-    if (lastCompletedUser && lastCompletionDate) {
-        startingIndex = userOrder.indexOf(lastCompletedUser);
-        const daysSinceLast = Math.floor((targetDate - lastCompletionDate) / (1000 * 60 * 60 * 24));
-        if (task.repeat === "Daily") {
-            cycles = daysSinceLast * repeatLimit;
-        } else if (task.repeat === "Weekly") {
-            const weeksSinceLast = Math.floor(daysSinceLast / 7);
-            cycles = weeksSinceLast * repeatLimit;
-        } else if (task.repeat === "Monthly") {
-            const monthsSinceLast = Math.floor(daysSinceLast / 30);
-            cycles = monthsSinceLast * repeatLimit;
-        } else {
-            cycles = daysSinceLast;
-        }
+    // Calculate total completions assuming full cycles each day
+    let totalCompletions = 0;
+    if (task.repeat === "Daily") {
+        totalCompletions = diffDays * repeatLimit;
+    } else if (task.repeat === "Weekly") {
+        const weeks = Math.floor(diffDays / 7);
+        totalCompletions = weeks * repeatLimit;
+    } else if (task.repeat === "Monthly") {
+        const months = Math.floor(diffDays / 30);
+        totalCompletions = months * repeatLimit;
     } else {
-        // No completions, assume full cycles from start date
-        if (task.repeat === "Daily") {
-            cycles = diffDays * repeatLimit;
-        } else if (task.repeat === "Weekly") {
-            const weeks = Math.floor(diffDays / 7);
-            cycles = weeks * repeatLimit;
-        } else if (task.repeat === "Monthly") {
-            const months = Math.floor(diffDays / 30);
-            cycles = months * repeatLimit;
-        } else {
-            cycles = diffDays;
-        }
+        totalCompletions = diffDays;
     }
 
-    // Adjust cycles to account for full daily completions
-    const totalTurns = cycles % userOrder.length;
-    const finalIndex = (startingIndex + totalTurns) % userOrder.length;
+    // Find the user by rotating through the user order
+    const totalTurns = totalCompletions % userOrder.length;
+    const finalIndex = totalTurns % userOrder.length;
 
     return userOrder[finalIndex];
 }
-
-
 
 
 
