--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -592,16 +592,19 @@ body {
     const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
     const completedCount = completedUsers.length;
 
-    // ✅ Safer turn logic
-    const currentIndex = typeof task.currentTurnIndex === "number" ? task.currentTurnIndex : 0;
-    const currentTurn = userOrder[currentIndex];
-    let nextUser = currentTurn;
+    // ✅ Safer currentTurn logic
+    let currentIndex = typeof task.currentTurnIndex === "number" ? task.currentTurnIndex : 0;
+    if (currentIndex < 0 || currentIndex >= userOrder.length) currentIndex = 0;
 
+    const currentTurn = userOrder[currentIndex];
+
+    // ✅ Determine next user in rotation who hasn't completed
+    let nextUser = currentTurn;
     const completedSet = new Set(completedUsers);
     for (let i = 1; i <= userOrder.length; i++) {
-      const index = (currentIndex + i) % userOrder.length;
-      if (!completedSet.has(userOrder[index])) {
-        nextUser = userOrder[index];
+      const idx = (currentIndex + i) % userOrder.length;
+      if (!completedSet.has(userOrder[idx])) {
+        nextUser = userOrder[idx];
         break;
       }
     }
@@ -636,7 +639,6 @@ body {
     enableSwipeToDelete(taskDiv);
   });
 }
-
 
 
 
@@ -756,7 +758,8 @@ async function showTaskDetails(task) {
 
 
         // Handle task completion and turn advancement
-        async function finishTask(userName, task, button, selectedDate) {
+// ✅ Handle task completion and turn advancement
+async function finishTask(userName, task, button, selectedDate) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     const todayStr = selectedDate || new Date().toISOString().split("T")[0];
 
@@ -777,18 +780,21 @@ async function showTaskDetails(task) {
 
         const rewardAmount = result.updatedTask.reward || 0;
 
-        // Trigger UI updates
+        // ✅ Trigger reward animation if available
         if (typeof triggerHoneyRain === 'function') triggerHoneyRain(rewardAmount);
-        if (typeof loadTasksForDate === 'function') loadTasksForDate(todayStr);
+
+        // ✅ Refresh task and user data after slight delay to allow DB sync
+        if (typeof loadTasksForDate === 'function') {
+            setTimeout(() => loadTasksForDate(todayStr), 150);
+        }
         if (typeof loadUserTasks === 'function') loadUserTasks(userName, todayStr);
         if (typeof loadUserReward === 'function') loadUserReward(userName);
+
     } catch (err) {
         console.error("❌ Error completing task:", err);
         alert("Failed to finish task. Please try again.");
     }
 }
-
-
 
 
 
